--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript" src="bundle.js"></script>
+
     <title>Galactic Age Calculator</title>
   </head>
   <body>
