finding bug to create the diffenrce in dates

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
         </div>
         <label for="age">Enter your age:</label>
         <input id="age-input" type="number">
+        <label for="diffrence1">Enter date1:</label>
+        <input id="date1" type="date">
+        <label for="diffrence2">Enter date2:</label>
+        <input id="date2" type="date">
         <button type="submit" name="button">Submit</button>
       </form>
     </div>
