--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <script type="text/javascript" src="bundle.js"></script>
-
     <title>Galactic Age Calculator</title>
   </head>
   <body>
@@ -23,6 +22,8 @@
     <div id="test-output">
       <p>It is <span class="second-year"></span></p>
     </div>
-
+    <div id="test2-output">
+      <p>It is <span class="second2-year"></span></p>
+    </div>
   </body>
 </html>
